<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recommendedPCLayoutLeft"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="@dimen/halved_standard_margins"
    android:layout_width="match_parent"
    android:elevation="6dp"
    android:padding="5dp"
    android:layout_height="wrap_content">
...
        android:elevation="10dp"
        android:textAppearance="@style/headlineTextFB"
        app:layout_constraintStart_toEndOf="@+id/imageBackgroundLeft"
        app:layout_constraintTop_toTopOf="@+id/imageBackgroundLeft" />

    <TextView
        android:id="@+id/recommendedTierPriceLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/recommendedTierPrice"
        app:layout_constraintEnd_toEndOf="parent"
...
