<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:verticalScrollbarPosition="right"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/halved_standard_margins"
        android:layout_marginBottom="?android:actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipToPadding="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>